index.html functionalities

--- a/BloggoFrontend/index.html
+++ b/BloggoFrontend/index.html
@@ -60,9 +60,14 @@
                 <p class="lead mb-3" style="font-size: 15px">Bloggo is a membership‑driven platform where ideas meet readers. Start your first story in minutes, or follow topics you care about.</p>
 
                 <div class="hero-cta d-flex flex-wrap gap-2 mb-4">
-                    <button class="btn btn-primary btn-lg" id="cta-start">Start Writing</button>
-                    <button class="btn btn-outline-secondary btn-lg" id="cta-join">Join the Community</button>
+                    <a href="pages/signing.html" class="btn btn-primary btn-lg" id="cta-start">
+                        Start Writing
+                    </a>
+                    <a href="pages/signup.html" class="btn btn-outline-secondary btn-lg" id="cta-join">
+                        Join the Community
+                    </a>
                 </div>
+
 
                 <div class="auth-quick" aria-label="Quick sign in">
                     <div class="d-flex flex-content gap-2">
