--- a/BloggoFrontend/pages/signing.html
+++ b/BloggoFrontend/pages/signing.html
@@ -18,9 +18,8 @@
 <!-- Header -->
 <div class="header">
   <div class="container d-flex justify-content-between align-items-center">
-    <a class="navbar-brand" href="../index.html" aria-label="Bloggo Home">
-      <img src="../assets/blogg.png" alt="Bloggo Logo" class="brand-logo">
-    </a>
+    <a class="navbar-brand" href="#" aria-label="Bloggo Home">BLOGGO</a>
+
     <div>
       <a href="signup.html" class="btn">Sign up</a>
       <a href="../index.html" class="btn" id="btn-home">Home</a>
