--- a/BloggoFrontend/pages/admin-action.html
+++ b/BloggoFrontend/pages/admin-action.html
@@ -11,48 +11,61 @@
     <link href="../css/admin-dashboard.css" rel="stylesheet">
 </head>
 <body>
-<header>
-    <div class="container d-flex justify-content-between align-items-center py-2">
-        <a class="brand" href="about-bloggo.html" aria-label="Bloggo Home">
-            <img src="../assets/blogg.png" alt="Bloggo Logo" class="brand-logo">
-        </a>
 
-        <nav class="d-flex align-items-center gap-2">
-            <div class="d-flex align-items-center">
-                <span class="text-black me-3">Welcome, Admin</span>
-                <img src="../assets/boy%20(1).png" alt="Admin Avatar" class="rounded-circle" width="40" height="40">
+<header class="sticky-top">
+    <nav class="glass-navbar align-items-center">
+        <h1 class="navbar-brand" href="#" aria-label="Bloggo Home">BLOGGO</h1>
+
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="d-flex align-items-center">
+            <div class="text-black me-3">Welcome, Admin</div>
+            <div class="dropdown profile-menu">
+
+                <a href="#" class="d-block" id="profileDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+                    <img src="../assets/boy%20(1).png" class="avatar" alt="Profile Avatar">
+                </a>
+                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
+                    <li>
+                        <a class="dropdown-item" href="user-management.html">
+                            <i class="fas fa-info me-2"></i> Admin Actions
+                        </a>
+                    </li>
+                    <li>
+                        <a class="dropdown-item" href="user-management.html">
+                            <i class="fas fa-user me-2"></i> User Management
+                        </a>
+                    </li>
+                    <li>
+                        <a class="dropdown-item" href="post-management.html">
+                            <i class="fas fa-blog me-2"></i> Post Management
+                        </a>
+                    </li>
+                    <li>
+                        <a class="dropdown-item" href="settings.html">
+                            <i class="fas fa-cog me-2"></i> Settings
+                        </a>
+                    </li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li>
+                        <a class="dropdown-item text-danger" href="logout.html">
+                            <i class="fas fa-sign-out-alt me-2"></i> Logout
+                        </a>
+                    </li>
+                </ul>
+
             </div>
-        </nav>
-    </div>
+        </div>
+
+    </nav>
 </header>
 
 <div class="container-fluid">
     <div class="row">
-        <!-- Sidebar -->
-        <nav class="col-md-2 d-md-block bg-light sidebar collapse">
-            <div class="position-sticky p-3">
-                <ul class="nav flex-column">
-                    <li class="nav-item mb-2">
-                        <a class="nav-link active" href="#">📊 Dashboard</a>
-                    </li>
-                    <li class="nav-item mb-2">
-                        <a class="nav-link" href="user-management.html">👤 Manage Users</a>
-                    </li>
-                    <li class="nav-item mb-2">
-                        <a class="nav-link" href="post-management.html">📝 Manage Posts</a>
-                    </li>
-                    <li class="nav-item mb-2">
-                        <a class="nav-link" href="user-management.html">⚡ Admin Actions</a>
-                    </li>
-                    <li class="nav-item mb-2">
-                        <a class="nav-link" href="settings.html">⚙️ Settings</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-
         <!-- Main Content -->
-        <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4 py-4">
+        <main class="container mt-4 col-lg-10">
             <h2 class="mb-4">Admin Dashboard</h2>
 
             <!-- Stats -->
