--- a/BloggoFrontend/pages/blog-editor.html
+++ b/BloggoFrontend/pages/blog-editor.html
@@ -15,37 +15,54 @@
 
 </head>
 <body>
-<header>
-    <div class="container d-flex justify-content-between align-items-center py-2">
-        <a class="brand" href="about-bloggo.html" aria-label="Bloggo Home">
-            <img src="../assets/blogg.png" alt="Bloggo Logo" class="brand-logo">
-        </a>
+<header class="sticky-top">
+    <nav class="glass-navbar align-items-center">
+        <h1 class="navbar-brand" href="#" aria-label="Bloggo Home">BLOGGO</h1>
 
-        <nav class="d-flex align-items-center gap-2">
-            <a class="btn" href="dashboard.html">Explore</a>
-            <a class="btn " href="notification.html">Notifications</a>
-            <a id="btn-publish" class="btn" href="#">Publish</a>
-            <div class="profile-menu">
-                <!-- User Profile (visible after login) -->
-                <div class="profile-menu">
-                    <!-- User Profile Menu -->
-                    <div class="dropdown profile-menu">
-                        <a href="#" class="d-block" id="profileDropdown" data-bs-toggle="dropdown" aria-expanded="false">
-                            <img src="../assets/boy%20(1).png" class="avatar" alt="Profile Avatar">
-                        </a>
-                        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
-                            <li><a class="dropdown-item" href="profile.html">👤 Profile</a></li>
-                            <li><a class="dropdown-item" href="stories.html">✍️ Stories</a></li>
-                            <li><a class="dropdown-item" href="membership.html">⭐ Become a Member</a></li>
-                            <li><a class="dropdown-item" href="settings.html">⚙️ Settings</a></li>
-                            <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item text-danger" href="logout.html">🚪 Logout</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </nav>
-    </div>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <a href="#"><i class="fas fa-home me-1"></i> Home</a>
+        <a href="#"><i class="fas fa-bell me-1"></i> Notifications</a>
+        <a href="#"><i class="fas fa-pen me-1"></i> Write</a>
+
+        <!-- User Profile Menu -->
+        <div class="dropdown profile-menu">
+            <a href="#" class="d-block" id="profileDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+                <img src="../assets/boy%20(1).png" class="avatar" alt="Profile Avatar">
+            </a>
+            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
+                <li>
+                    <a class="dropdown-item" href="profile.html">
+                        <i class="fas fa-user me-2"></i> Profile
+                    </a>
+                </li>
+                <li>
+                    <a class="dropdown-item" href="stories.html">
+                        <i class="fas fa-pen-nib me-2"></i> Stories
+                    </a>
+                </li>
+                <li>
+                    <a class="dropdown-item" href="membership.html">
+                        <i class="fas fa-star me-2"></i> Become a Member
+                    </a>
+                </li>
+                <li>
+                    <a class="dropdown-item" href="settings.html">
+                        <i class="fas fa-cog me-2"></i> Settings
+                    </a>
+                </li>
+                <li><hr class="dropdown-divider"></li>
+                <li>
+                    <a class="dropdown-item text-danger" href="logout.html">
+                        <i class="fas fa-sign-out-alt me-2"></i> Logout
+                    </a>
+                </li>
+            </ul>
+
+        </div>
+    </nav>
 </header>
 
 <main class="container my-5">
@@ -55,7 +72,7 @@
                placeholder="Title">
 
         <!-- Toolbar -->
-        <div class="toolbar border-bottom p-3 bg-light d-flex flex-wrap gap-2">
+        <div class="toolbar border-bottom p-3 bg-light d-flex flex-wrap gap-2 align-items-center" >
             <button onclick="format('bold')" class="btn btn-sm btn-outline-secondary fw-bold" title="Bold">B</button>
             <button onclick="format('italic')" class="btn btn-sm btn-outline-secondary" title="Italic"><em>I</em></button>
             <button onclick="format('underline')" class="btn btn-sm btn-outline-secondary" title="Underline"><u>U</u></button>
@@ -69,6 +86,13 @@
             <button onclick="format('formatBlock','<h2>')" class="btn btn-sm btn-outline-secondary" title="Heading 2">H2</button>
             <button onclick="format('formatBlock','<pre>')" class="btn btn-sm btn-outline-secondary" title="Code Block">{ }</button>
             <button onclick="insertImage()" class="btn btn-sm btn-outline-secondary" title="Insert Image">🖼️</button>
+            <input type="file" id="imageInput" accept="image/*" style="display: none;" onchange="uploadImage(event)">
+            <button onclick="format('undo')" class="btn btn-sm btn-outline-secondary" title="Undo">↺</button>
+            <button onclick="format('redo')" class="btn btn-sm btn-outline-secondary" title="Redo">↻</button>
+
+            <div class="ms-auto">
+                <a id="btn-publish" class="btn" href="#">Publish</a>
+            </div>
         </div>
 
         <!-- Editor -->
