--- a/BloggoFrontend/pages/dashboard.html
+++ b/BloggoFrontend/pages/dashboard.html
@@ -17,43 +17,55 @@
     <link href="../css/dashboard.css" rel="stylesheet">
 </head>
 <body>
-<header>
-    <div class="container nav">
-        <a class="brand" href="about-bloggo.html" aria-label="Bloggo Home">
-            <img src="../assets/blogg.png" alt="Bloggo Logo" class="brand-logo">
-        </a>
+<header class="sticky-top">
+    <nav class="glass-navbar align-items-center">
+        <h1 class="navbar-brand" href="#" aria-label="Bloggo Home">BLOGGO</h1>
 
-        <!-- 🔍 Search Bar -->
-        <form class="d-flex mx-3 flex-grow-1" role="search" onsubmit="return false;">
-            <input class="form-control me-2" type="search" id="searchInput" placeholder="Search blogs, tags, or authors..." aria-label="Search">
-            <button class="btn btn-outline-success" type="button" onclick="searchBlogs()">Search</button>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-            <div id="searchResults" class="list-group position-absolute w-100"
-                 style="top: 100%; z-index: 1050; display: none; max-height: 300px; overflow-y: auto;">
-            </div>
-        </form>
+        <a href="#"><i class="fas fa-home me-1"></i> Home</a>
+        <a href="#"><i class="fas fa-bell me-1"></i> Notifications</a>
+        <a href="#"><i class="fas fa-pen me-1"></i> Write</a>
 
-        <nav class="nav-actions">
-            <a class="btn" href="about-bloggo.html">Explore</a>
-            <a class="btn" href="notification.html">Notifications</a>
-            <a class="btn btn-primary" href="blog-editor.html">Write</a>
 
-            <!-- ✅ Profile dropdown -->
-            <div class="dropdown profile-menu">
-                <a href="#" class="d-block" id="profileDropdown" data-bs-toggle="dropdown" aria-expanded="false">
-                    <img src="../assets/boy%20(1).png" class="avatar" alt="User Profile">
-                </a>
-                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
-                    <li><a class="dropdown-item" href="profile.html">👤 Profile</a></li>
-                    <li><a class="dropdown-item" href="stories.html">✍️ Stories</a></li>
-                    <li><a class="dropdown-item" href="membership.html">⭐ Become a Member</a></li>
-                    <li><a class="dropdown-item" href="settings.html">⚙️ Settings</a></li>
-                    <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item text-danger" href="logout.html">🚪 Logout</a></li>
-                </ul>
-            </div>
-        </nav>
-    </div>
+        <!-- User Profile Menu -->
+        <div class="dropdown profile-menu">
+            <a href="#" class="d-block" id="profileDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+                <img src="../assets/boy%20(1).png" class="avatar" alt="Profile Avatar">
+            </a>
+            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
+                <li>
+                    <a class="dropdown-item" href="profile.html">
+                        <i class="fas fa-user me-2"></i> Profile
+                    </a>
+                </li>
+                <li>
+                    <a class="dropdown-item" href="stories.html">
+                        <i class="fas fa-pen-nib me-2"></i> Stories
+                    </a>
+                </li>
+                <li>
+                    <a class="dropdown-item" href="membership.html">
+                        <i class="fas fa-star me-2"></i> Become a Member
+                    </a>
+                </li>
+                <li>
+                    <a class="dropdown-item" href="settings.html">
+                        <i class="fas fa-cog me-2"></i> Settings
+                    </a>
+                </li>
+                <li><hr class="dropdown-divider"></li>
+                <li>
+                    <a class="dropdown-item text-danger" href="logout.html">
+                        <i class="fas fa-sign-out-alt me-2"></i> Logout
+                    </a>
+                </li>
+            </ul>
+
+        </div>
+    </nav>
 </header>
 
 
