--- a/BloggoFrontend/pages/signup.html
+++ b/BloggoFrontend/pages/signup.html
@@ -16,14 +16,15 @@
 
 </head>
 <body>
+
+
 <div class="header">
     <div class="container d-flex justify-content-between align-items-center">
-        <a class="navbar-brand" href="../index.html" aria-label="Bloggo Home">
-            <img src="../assets/blogg.png" alt="Bloggo Logo" class="brand-logo">
-        </a>
+        <a class="navbar-brand" href="#" aria-label="Bloggo Home">BLOGGO</a>
+
         <div>
-            <a href="signing.html" class="btn">Sign in</a>
-            <a href="../index.html" class="btn" id="btn-home">Home</a>
+            <a href="signing.html" class="btn"><i class="fas fa-sign-in-alt me-1"></i> Sign in</a>
+            <a href="../index.html" class="btn" id="btn-home"><i class="fas fa-home me-1"></i> Home</a>
         </div>
     </div>
 </div>
