--- a/BloggoFrontend/pages/test.html
+++ b/BloggoFrontend/pages/test.html
@@ -19,7 +19,7 @@
       --glass-dark: rgba(255, 255, 255, 0.1);
       --glass-border: rgba(255, 255, 255, 0.3);
       --glass-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
-      --primary-gradient: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      --primary-gradient: linear-gradient(135deg, #667eea 0%, #ece8ef 100%);
       --accent-color: #7c3aed;
     }
 
