--- a/BloggoFrontend/pages/forgot-password.html
+++ b/BloggoFrontend/pages/forgot-password.html
@@ -2,9 +2,55 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Forgot Password</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            background: #f8fafc;
+        }
+        .card {
+            border-radius: 16px;
+        }
+        .alert {
+            display: none;
+        }
+        .spinner-border-sm {
+            width: 1rem;
+            height: 1rem;
+            border-width: 0.15em;
+        }
+    </style>
 </head>
-<body>
+<body >
+<form id="forgotForm">
+    <input type="email" id="email" placeholder="Enter your email" required />
+    <button type="submit">Send Reset Link</button>
+</form>
 
+<script>
+    document.getElementById("forgotForm").addEventListener("submit", async (e) => {
+        e.preventDefault();
+
+        const email = document.getElementById("email").value;
+
+        try {
+            const response = await fetch("http://localhost:8080/auth/forgot-password", {
+                method: "POST",
+                headers: {
+                    "Content-Type": "application/json"
+                },
+                body: JSON.stringify({ email }),
+                credentials: "include" // allow cookies if needed
+            });
+
+            const result = await response.text();
+            alert(result);
+        } catch (err) {
+            console.error(err);
+            alert("Something went wrong.");
+        }
+    });
+</script>
 </body>
 </html>
